force-app/main/default/objects/Rule_Entry__mdt/Rule_Entry__mdt.object-meta.xml
<CustomObject>
    <label>Rule  Entry</label>
    <pluralLabel>Rule  Entries</pluralLabel>
</CustomObject>