force-app/main/default/objects/Rule_Entry__mdt/fields/Key_InputData_Map__c.field-meta.xml
<CustomField>
    <fullName>Key_InputData_Map__c</fullName>
    <description>To capture the input data</description>
    <label>Key_InputData_Map</label>
    <length>100</length>
    <type>Text</type>
</CustomField>