force-app/main/default/objects/Rule_Entry__mdt/fields/Rule_Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>Rule_Criteria_Field__c</fullName>
    <description>To capture the rule criteria</description>
    <label>Rule Criteria Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>