force-app/main/default/objects/Rule_Entry__mdt/fields/Rule_Criteria_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Rule_Criteria_Field_Value__c</fullName>
    <description>To capture the rule criteria value</description>
    <label>Rule Criteria Field Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>