force-app/main/default/objects/Rule_Entry__mdt/fields/Rule_Criteria_Object__c.field-meta.xml
<CustomField>
    <fullName>Rule_Criteria_Object__c</fullName>
    <description>To capture the object on which the rule is defined</description>
    <label>Rule Criteria Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>