force-app/main/default/objects/Rule_Entry__mdt/fields/Rule_Criteria_Operator__c.field-meta.xml
<CustomField>
    <fullName>Rule_Criteria_Operator__c</fullName>
    <description>To capture the criteria operators</description>
    <label>Rule Criteria Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
                <default>true</default>
                <label>IN</label>
            </value>
            <value>
                <fullName>Not IN</fullName>
            </value>
            <value>
                <fullName>Not Equals</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>Not Null</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
            <value>
                <fullName>Not Blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>