force-app/main/default/objects/Rule_Entry__mdt/fields/Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>Rule_Description__c</fullName>
    <description>To capture description of the rule</description>
    <label>Rule Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>