force-app/main/default/objects/Rule_Entry__mdt/fields/Rule_InputData_Map__c.field-meta.xml
<CustomField>
    <fullName>Rule_InputData_Map__c</fullName>
    <description>To capture the rule input data</description>
    <label>Rule InputData Map</label>
    <length>200</length>
    <type>Text</type>
</CustomField>