force-app/main/default/objects/Rule_Entry__mdt/fields/Rule_Object__c.field-meta.xml
<CustomField>
    <fullName>Rule_Object__c</fullName>
    <description>To capture the label of the rule object</description>
    <label>Rule  Object</label>
    <referenceTo>Rule_Object__mdt</referenceTo>
    <relationshipLabel>Rule  Entries</relationshipLabel>
    <relationshipName>Rule_Entries</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>