force-app/main/default/objects/Rule_Entry__mdt/listViews/Work_Detail_Billable_Rules.listView-meta.xml
<ListView>
    <fullName>Work_Detail_Billable_Rules</fullName>
    <columns>MasterLabel</columns>
    <columns>Rule_Priority__c</columns>
    <columns>Is_TopMost_Rule__c</columns>
    <columns>Rule_Criteria_Object__c</columns>
    <columns>Rule_InputData_Map__c</columns>
    <columns>Rule_Criteria_Field__c</columns>
    <columns>Rule_Criteria_Field_Value__c</columns>
    <columns>Rule_Criteria_Operator__c</columns>
    <columns>Exit_If_Satisfied__c</columns>
    <columns>Next_Rule_Id__c</columns>
    <columns>Next_Rule_Operator__c</columns>
    <columns>Rule_OutCome__c</columns>
    <columns>Key_InputData_Map__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rule_Object__c</field>
        <operation>equals</operation>
        <value>Work_Detail_Billable_Rules</value>
    </filters>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Work Detail Billable Rules</label>
    <language>en_US</language>
</ListView>